@@ -12,8 +12,6 @@ import org.elasticsearch.ElasticsearchException;
 import org.elasticsearch.test.ESTestCase;
 import org.junit.Before;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.TimeUnit;
@@ -21,7 +19,7 @@ import java.util.function.BiConsumer;
 import java.util.function.Consumer;
 import java.util.function.LongSupplier;
 
-import static org.hamcrest.CoreMatchers.equalTo;
+import static org.hamcrest.Matchers.equalTo;
 import static org.hamcrest.Matchers.hasSize;
 import static org.hamcrest.Matchers.is;
 import static org.hamcrest.Matchers.notNullValue;
@@ -51,12 +49,18 @@ public class CompoundProcessorTests extends ESTestCase {
     }
 
     public void testSingleProcessor() throws Exception {
+        boolean isAsync = randomBoolean();
         LongSupplier relativeTimeProvider = mock(LongSupplier.class);
         when(relativeTimeProvider.getAsLong()).thenReturn(0L, TimeUnit.MILLISECONDS.toNanos(1));
         TestProcessor processor = new TestProcessor(
             ingestDocument -> { assertStats(0, ingestDocument.getFieldValue("compoundProcessor", CompoundProcessor.class), 1, 0, 0, 0); }
-        );
-        CompoundProcessor compoundProcessor = new CompoundProcessor(relativeTimeProvider, false, processor);
+        ) {
+            @Override
+            public boolean isAsync() {
+                return isAsync;
+            }
+        };
+        CompoundProcessor compoundProcessor = new CompoundProcessor(false, List.of(processor), List.of(), relativeTimeProvider);
         ingestDocument.setFieldValue("compoundProcessor", compoundProcessor); // ugly hack to assert current count = 1
         assertThat(compoundProcessor.getProcessors().size(), equalTo(1));
         assertThat(compoundProcessor.getProcessors().get(0), sameInstance(processor));
@@ -66,14 +70,13 @@ public class CompoundProcessorTests extends ESTestCase {
         verify(relativeTimeProvider, times(2)).getAsLong();
         assertThat(processor.getInvokedCounter(), equalTo(1));
         assertStats(compoundProcessor, 1, 0, 1);
-
     }
 
     public void testSingleProcessorWithException() throws Exception {
         TestProcessor processor = new TestProcessor(new RuntimeException("error"));
         LongSupplier relativeTimeProvider = mock(LongSupplier.class);
         when(relativeTimeProvider.getAsLong()).thenReturn(0L);
-        CompoundProcessor compoundProcessor = new CompoundProcessor(relativeTimeProvider, false, processor);
+        CompoundProcessor compoundProcessor = new CompoundProcessor(false, List.of(processor), List.of(), relativeTimeProvider);
         assertThat(compoundProcessor.getProcessors().size(), equalTo(1));
         assertThat(compoundProcessor.getProcessors().get(0), sameInstance(processor));
         assertThat(compoundProcessor.getOnFailureProcessors().isEmpty(), is(true));
@@ -82,18 +85,18 @@ public class CompoundProcessorTests extends ESTestCase {
         assertThat(((ElasticsearchException) holder[0]).getRootCause().getMessage(), equalTo("error"));
         assertThat(processor.getInvokedCounter(), equalTo(1));
         assertStats(compoundProcessor, 1, 1, 0);
-
     }
 
     public void testIgnoreFailure() throws Exception {
-        TestProcessor processor1 = new TestProcessor(new RuntimeException("error"));
+        TestProcessor processor1 = getTestProcessor(null, randomBoolean(), true);
         TestProcessor processor2 = new TestProcessor(ingestDocument -> { ingestDocument.setFieldValue("field", "value"); });
+        TestProcessor processor3 = new TestProcessor(ingestDocument -> fail("ignoreFailure is true, processor shouldn't be called"));
         LongSupplier relativeTimeProvider = mock(LongSupplier.class);
         when(relativeTimeProvider.getAsLong()).thenReturn(0L);
         CompoundProcessor compoundProcessor = new CompoundProcessor(
             true,
-            Arrays.asList(processor1, processor2),
-            Collections.emptyList(),
+            List.of(processor1, processor2),
+            List.of(processor3), // when ignoreFailure is true, onFailureProcessors are not called (regardless of whether a failure occurs)
             relativeTimeProvider
         );
         executeCompound(compoundProcessor, ingestDocument, (result, e) -> {});
@@ -116,12 +119,7 @@ public class CompoundProcessorTests extends ESTestCase {
 
         LongSupplier relativeTimeProvider = mock(LongSupplier.class);
         when(relativeTimeProvider.getAsLong()).thenReturn(0L, TimeUnit.MILLISECONDS.toNanos(1));
-        CompoundProcessor compoundProcessor = new CompoundProcessor(
-            false,
-            Collections.singletonList(processor1),
-            Collections.singletonList(processor2),
-            relativeTimeProvider
-        );
+        CompoundProcessor compoundProcessor = new CompoundProcessor(false, List.of(processor1), List.of(processor2), relativeTimeProvider);
         executeCompound(compoundProcessor, ingestDocument, (result, e) -> {});
         verify(relativeTimeProvider, times(2)).getAsLong();
 
@@ -157,12 +155,7 @@ public class CompoundProcessorTests extends ESTestCase {
 
         LongSupplier relativeTimeProvider = mock(LongSupplier.class);
         when(relativeTimeProvider.getAsLong()).thenReturn(0L);
-        CompoundProcessor compoundProcessor = new CompoundProcessor(
-            false,
-            Collections.singletonList(processor1),
-            Collections.singletonList(processor2),
-            relativeTimeProvider
-        );
+        CompoundProcessor compoundProcessor = new CompoundProcessor(false, List.of(processor1), List.of(processor2), relativeTimeProvider);
         IngestDocument[] result = new IngestDocument[1];
         executeCompound(compoundProcessor, ingestDocument, (r, e) -> result[0] = r);
         assertThat(result[0], nullValue());
@@ -191,14 +184,14 @@ public class CompoundProcessorTests extends ESTestCase {
         when(relativeTimeProvider.getAsLong()).thenReturn(0L);
         CompoundProcessor compoundOnFailProcessor = new CompoundProcessor(
             false,
-            Collections.singletonList(processorToFail),
-            Collections.singletonList(lastProcessor),
+            List.of(processorToFail),
+            List.of(lastProcessor),
             relativeTimeProvider
         );
         CompoundProcessor compoundProcessor = new CompoundProcessor(
             false,
-            Collections.singletonList(processor),
-            Collections.singletonList(compoundOnFailProcessor),
+            List.of(processor),
+            List.of(compoundOnFailProcessor),
             relativeTimeProvider
         );
         executeCompound(compoundProcessor, ingestDocument, (result, e) -> {});
@@ -229,8 +222,8 @@ public class CompoundProcessorTests extends ESTestCase {
         CompoundProcessor compoundOnFailProcessor = new CompoundProcessor(false, List.of(onFailure1, of2), List.of(), relativeTimeProvider);
         CompoundProcessor compoundProcessor = new CompoundProcessor(
             false,
-            Collections.singletonList(firstFailingProcessor),
-            Collections.singletonList(compoundOnFailProcessor),
+            List.of(firstFailingProcessor),
+            List.of(compoundOnFailProcessor),
             relativeTimeProvider
         );
         IngestDocument[] docHolder = new IngestDocument[1];
@@ -262,12 +255,12 @@ public class CompoundProcessorTests extends ESTestCase {
         LongSupplier relativeTimeProvider = mock(LongSupplier.class);
         when(relativeTimeProvider.getAsLong()).thenReturn(0L);
 
-        CompoundProcessor failCompoundProcessor = new CompoundProcessor(relativeTimeProvider, false, firstProcessor);
+        CompoundProcessor failCompoundProcessor = new CompoundProcessor(false, List.of(firstProcessor), List.of(), relativeTimeProvider);
 
         CompoundProcessor compoundProcessor = new CompoundProcessor(
             false,
-            Collections.singletonList(failCompoundProcessor),
-            Collections.singletonList(secondProcessor),
+            List.of(failCompoundProcessor),
+            List.of(secondProcessor),
             relativeTimeProvider
         );
         executeCompound(compoundProcessor, ingestDocument, (result, e) -> {});
@@ -292,15 +285,15 @@ public class CompoundProcessorTests extends ESTestCase {
         when(relativeTimeProvider.getAsLong()).thenReturn(0L);
         CompoundProcessor failCompoundProcessor = new CompoundProcessor(
             false,
-            Collections.singletonList(firstProcessor),
-            Collections.singletonList(failProcessor),
+            List.of(firstProcessor),
+            List.of(failProcessor),
             relativeTimeProvider
         );
 
         CompoundProcessor compoundProcessor = new CompoundProcessor(
             false,
-            Collections.singletonList(failCompoundProcessor),
-            Collections.singletonList(secondProcessor),
+            List.of(failCompoundProcessor),
+            List.of(secondProcessor),
             relativeTimeProvider
         );
         executeCompound(compoundProcessor, ingestDocument, (result, e) -> {});
@@ -325,14 +318,14 @@ public class CompoundProcessorTests extends ESTestCase {
         when(relativeTimeProvider.getAsLong()).thenReturn(0L);
         CompoundProcessor failCompoundProcessor = new CompoundProcessor(
             false,
-            Collections.singletonList(firstProcessor),
-            Collections.singletonList(new CompoundProcessor(relativeTimeProvider, false, failProcessor))
+            List.of(firstProcessor),
+            List.of(new CompoundProcessor(false, List.of(failProcessor), List.of(), relativeTimeProvider))
         );
 
         CompoundProcessor compoundProcessor = new CompoundProcessor(
             false,
-            Collections.singletonList(failCompoundProcessor),
-            Collections.singletonList(secondProcessor),
+            List.of(failCompoundProcessor),
+            List.of(secondProcessor),
             relativeTimeProvider
         );
         executeCompound(compoundProcessor, ingestDocument, (result, e) -> {});
@@ -350,8 +343,8 @@ public class CompoundProcessorTests extends ESTestCase {
         when(relativeTimeProvider.getAsLong()).thenReturn(0L);
         CompoundProcessor pipeline = new CompoundProcessor(
             false,
-            Arrays.asList(firstProcessor, secondProcessor),
-            Collections.singletonList(onFailureProcessor),
+            List.of(firstProcessor, secondProcessor),
+            List.of(onFailureProcessor),
             relativeTimeProvider
         );
         executeCompound(pipeline, ingestDocument, (result, e) -> {});
@@ -493,7 +486,7 @@ public class CompoundProcessorTests extends ESTestCase {
         for (int i = 0; i < processorsCount; i++) {
             processors[i] = getTestProcessor(Integer.toString(i), randomBoolean(), randomBoolean());
         }
-        CompoundProcessor compoundProcessor = new CompoundProcessor(relativeTimeProvider, true, processors);
+        CompoundProcessor compoundProcessor = new CompoundProcessor(true, List.of(processors), List.of(), relativeTimeProvider);
         executeCompound(
             compoundProcessor,
             ingestDocument,
@@ -521,7 +514,7 @@ public class CompoundProcessorTests extends ESTestCase {
         for (int i = goodProcessorsCount + 1; i < totalProcessorsCount; i++) {
             processors[i] = getTestProcessor(Integer.toString(i), randomBoolean(), false);
         }
-        CompoundProcessor compoundProcessor = new CompoundProcessor(relativeTimeProvider, false, processors);
+        CompoundProcessor compoundProcessor = new CompoundProcessor(false, List.of(processors), List.of(), relativeTimeProvider);
         executeCompound(compoundProcessor, ingestDocument, (result, e) -> {});
         for (int i = 0; i < goodProcessorsCount + 1; i++) {
             assertThat(
